fix: lodging results tiles stretch and shrink!

--- a/assets/styles/results.css
+++ b/assets/styles/results.css
@@ -36,8 +36,8 @@
 
 .top-lodging__tile-image {
     border-radius: 1rem 0 0 1rem;
-    width: 127px;
-    height: 127px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -112,7 +112,7 @@
 
 .lodging__tile-image {
     border-radius: 1rem 1rem 0 0;
-    height: 114px;
+    height: 100%;
     width: 100%;
     object-fit: cover;
 }
@@ -165,9 +165,8 @@
         margin-right: -2rem;
     }
 
-    .lodging__tile-image-container {
-        flex: 1 0 180px;
-        
+    .lodging__tiles-flex-children {
+        flex: 1 1 240px;
     }
 
     .lodging__tile {
@@ -188,14 +187,9 @@
         flex-basis: 70vw;
     }
 
-    .lodging__tile-image-container {
-        flex: 228px
+    .lodging__tiles-flex-children {
+        flex: 1 1 275px;
     }
-    
-    /*.lodging__tile {
-        /*min-width: 228px; /*! tiles width needs to stretch up
-        flex: 1 0 1000000px;
-    }*/
 }
 
 /* lodging results container */
@@ -243,10 +237,8 @@
     box-shadow: 0 0 2rem -1rem black;
 }
 
-.activity__tile-text { /*! prevent overflow on small desktop */
-    background-color: white;
+.activity__tile-text {
     padding: 0 1rem 0.5rem 1rem;
-    border-radius: 0 0 1.25rem 1.25rem;
 }
 
 @media all and (min-width: 768px) {
